// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleFieldset should render a collapsed fieldset (header only) 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <withI18nextTranslation(CollapsiblePanel)
    expanded={false}
    header={
      Array [
        Object {
          "label": "Basic",
        },
        Array [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "age",
          ],
          "schema": Object {
            "type": "number",
          },
          "title": "Age",
          "type": "number",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": true,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "address",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "Adress",
          "type": "text",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": true,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
  </withI18nextTranslation(CollapsiblePanel)>
</fieldset>
`;

exports[`CollapsibleFieldset should render a custom title 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <withI18nextTranslation(CollapsiblePanel)
    expanded={true}
    header={
      Array [
        Object {
          "label": "Basic: Jimmy Somsanith",
        },
        Array [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "age",
          ],
          "schema": Object {
            "type": "number",
          },
          "title": "Age",
          "type": "number",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "address",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "Adress",
          "type": "text",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
  </withI18nextTranslation(CollapsiblePanel)>
</fieldset>
`;

exports[`CollapsibleFieldset should render a full fieldset (header and body) 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <withI18nextTranslation(CollapsiblePanel)
    expanded={true}
    header={
      Array [
        Object {
          "label": "Basic",
        },
        Array [],
      ]
    }
    id="my-fieldset"
    onToggle={[Function]}
  >
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "age",
          ],
          "schema": Object {
            "type": "number",
          },
          "title": "Age",
          "type": "number",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "address",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "Adress",
          "type": "text",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
  </withI18nextTranslation(CollapsiblePanel)>
</fieldset>
`;
